styles/navigation-bar.css
@import "general.css";

.navigation-bar-container {
  display: flex;
  position: fixed;
  justify-content: space-between;
  height: 75px;
  width: 100%;
  background-color: var(--navbar-footer-background-color);
}

.left-section {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 36px;
}
.logo {
  font-size: 2.5em;
  color: var(--navbar-text-color);
  font-weight: bold;  
  text-decoration: none;
}

.right-section {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 36px;
}

.nav-link {
  margin-right: 16px;
  margin-left: 16px;
  color: var(--navbar-text-color);
  text-decoration: none;
  font-size: 18px;
  transition: opacity 0.15s, text-decoration 0.15s;
}
.nav-link:hover {
  cursor: pointer;
  opacity: 0.6;
  text-decoration: underline;
} 

#theme-toggle {
  width: 0;
  height: 0;
  border: none;
  margin-right: 44px;
}
.theme-icon {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  padding: 0px;
  transition: opacity 0.15s;
}
#theme-toggle:hover {
  cursor: pointer;
  opacity: 0.6;
}

